--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
     - docker build -t djsmallman/docker-react -f dockerfile.dev .
 
     script:
-  - docker run -e CI=true USERNAME/docker-react npm run test
+  - docker run -e CI=true djsmallman/docker-react npm run test
