--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ bucket_name: "elasticbeanstalk-eu-west-2-997493607229"
 bucket_path: "docker-react"
 on:
 branch: master
-access_key_id: $AWS_ACCESS_KEY
+access_key_id: "$AWS_ACCESS_KEY"
 secret_access_key: 
   secure: "$AWS_SECRET_KEY"
