--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ bucket_name: "elasticbeanstalk-eu-west-2-997493607229"
 bucket_path: "docker-react"
 on:
 branch: master
-access_key_id: $accesskey
-secret_access_key: $accesssecret
+aws_access_key_id: $accesskey
+aws_secret_access_key: $accesssecret
