--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,23 @@ language: generic
 sudo: required
 
 services:
- - docker
+  - docker
 
 before_install:
- - docker build -t djsmallman/docker-react -f dockerfile.dev .
+  - docker build -t djsmallman/docker-react -f Dockerfile.dev .
 
 script:
- - docker run -e CI=true djsmallman/docker-react npm run test -- --coverage
+  - docker run -e CI=true djsmallman/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-2"
- app: "docker-react"
- env: "DockerReact-env"
- bucket_name: "elasticbeanstalk-eu-west-2-997493607229"
- bucket_path: "docker-react"
- on:
-  branch: master
- access_key_id: $AWS_ACCESS_KEY
- secret_access_key: $AWS_SECRET_KEY
+  app: "Docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-2-997493607229"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
 
